fix font sizes and nav alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@
   }
 
   nav {
-    @apply text-lg xl:text-xl;
+    @apply text-lg;
   }
 
   body {
